deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-#USER#-blue
  namespace: #USER#
  labels:
    app: app-user-blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-user-blue
  template:
    metadata:
      labels:
        app: app-user-blue
    spec:
      containers:
      - name: app-user-blue
        image: #DOCKER-HUB-USERNAME#/#APPUSER#
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: 50m
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 128Mi
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 30            
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 30
